added css to login page

--- a/login.html
+++ b/login.html
@@ -5,9 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/stylesheets/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <title>Sign In | Code Wars</title>
 </head>
 <body>
+    <!-- Parent Container -->
+    <div class="container">
+        <section class="main-logo-section">
+           <img class="main-logo-image" src="assets/media/images/main-logo.png">
+           <h2 class="header-two">codewars</h2>
+        </section>
+        <section>
+            <button class="github-button btn" ><i class="fab fa-github"></i>GITHUB LOGIN</button>
+        </section>
+        <div>
+            <p>-or-</p>
+        </div>
+        <section class="inputfields">
+            
+        </section>
+    </div>
     
 </body>
 </html>
