--- a/login.html
+++ b/login.html
@@ -16,13 +16,20 @@
            <h2 class="header-two">codewars</h2>
         </section>
         <section>
-            <button class="github-button btn" ><i class="fab fa-github"></i>GITHUB LOGIN</button>
+            <button class="login-btn" ><i class="fab fa-github"></i>GITHUB LOGIN</button>
         </section>
         <div>
             <p>-or-</p>
         </div>
         <section class="inputfields">
             
+        </section>
+        <div>
+            <button class="login-btn">LOG IN</button>
+        </div>
+        <section>
+            <a href="#" class="toblock">Forgot Password?</a>
+            <a href="#" class="toblock">Sign Up</a>
         </section>
     </div>
     
