--- a/login.html
+++ b/login.html
@@ -21,12 +21,19 @@
         <div>
             <p>-or-</p>
         </div>
-        <section class="inputfields">
-            
-        </section>
-        <div>
-            <button class="login-btn">LOG IN</button>
-        </div>
+        <form action="post">
+            <div class="input-row">
+                <i class="fas fa-envelope"></i> 
+                <input type="email" name="email" placeholder="email">
+            </div>
+            <div class="input-row">
+                    <i class="fas fa-lock"></i>
+                <input type="password" name="password" id="" placeholder="password">
+            </div>
+            <div class="input-row">
+                <button class="login-btn" type="submit">log in</button>
+            </div>
+        </form>
         <section>
             <a href="#" class="toblock">Forgot Password?</a>
             <a href="#" class="toblock">Sign Up</a>
