adding styles to form

--- a/login.html
+++ b/login.html
@@ -24,13 +24,13 @@
         <form action="post">
             <div class="input-row">
                 <i class="fas fa-envelope"></i> 
-                <input type="email" name="email" placeholder="email">
+                <input type="email" name="email" placeholder="email" class="input">
             </div>
             <div class="input-row">
                     <i class="fas fa-lock"></i>
-                <input type="password" name="password" id="" placeholder="password">
+                <input type="password" name="password" id="" placeholder="password" class="input">
             </div>
-            <div class="input-row">
+            <div class="submit-row">
                 <button class="login-btn" type="submit">log in</button>
             </div>
         </form>
