added table data

--- a/second-page.html
+++ b/second-page.html
@@ -65,8 +65,34 @@
                 
                     <!-- table body starts -->
                     <tbody>
-                        <tr></tr>
-                        <tr></tr>
+                        <tr>
+                            <td>
+                                Amit
+                            </td>
+                            <td>
+                                amitg01@gmail.com
+                            </td>
+                            <td>
+                                1kyu
+                            </td>
+                            <td>
+                                6
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Aman
+                            </td>
+                            <td>
+                                amanregu@gmail.com
+                            </td>
+                            <td>
+                                2kyu
+                            </td>
+                            <td>
+                                6
+                            </td>
+                        </tr>
                         <tr></tr>
                         <tr></tr>
                     </tbody>
