added some style elements

--- a/login.html
+++ b/login.html
@@ -12,31 +12,33 @@
     <!-- Parent Container -->
     <div class="container">
         <section class="main-logo-section">
+            <a href="https://www.codewars.com/">
            <img class="main-logo-image" src="assets/media/images/main-logo.png">
-           <h2 class="header-two">codewars</h2>
+           <h2 class="header-two toinlineblock">codewars</h2>
+           </a>
         </section>
         <section>
-            <button class="login-btn" ><i class="fab fa-github"></i>GITHUB LOGIN</button>
+            <button class="login-btn" ><i class="fab fa-github"></i> GITHUB LOGIN</button>
         </section>
         <div>
-            <p>-or-</p>
+            <p class="towhite">-or-</p>
         </div>
         <form action="post">
-            <div class="input-row">
-                <i class="fas fa-envelope"></i> 
-                <input type="email" name="email" placeholder="email" class="input">
-            </div>
-            <div class="input-row">
-                    <i class="fas fa-lock"></i>
-                <input type="password" name="password" id="" placeholder="password" class="input">
-            </div>
-            <div class="submit-row">
-                <button class="login-btn" type="submit">log in</button>
-            </div>
-        </form>
+                <div class="input-row">
+                    <i class="fas fa-envelope"></i> 
+                    <input type="email" name="email" placeholder="email" class="input">
+                </div>
+                <div class="input-row">
+                        <i class="fas fa-lock"></i>
+                    <input type="password" name="password" id="" placeholder="password" class="input">
+                </div>
+                <div class="submit-row">
+                    <button class="login-btn margin-property" type="submit">LOG IN</button>
+                </div>
+            </form>
         <section>
-            <a href="#" class="toblock">Forgot Password?</a>
-            <a href="#" class="toblock">Sign Up</a>
+            <a href="#" class="grey-text toblock">Forgot Password?</a>
+            <a href="#" class="grey-text toblock margin-property padding-property">Sign Up</a>
         </section>
     </div>
     
